# atlas

./: .gitignore  Makefile  Makefile.conf  Makefile.conf.in  Makefile.in  NOTICE.txt  README.md  alire-ews.toml  alire.toml  atlas.gpr  atlas.gpr.in  atlas.properties  atlas_ews.gpr  configure  configure.ac  dynamo.xml  rules.mk.in
bundles/: layout.properties  layout_fr.properties  reviews.properties  reviews_fr.properties
config/: atlas.xml
db/mysql/: atlas-init-mysql.sql  atlas-init-sqlite.sql  atlas-mysql.sql  create-atlas-mysql.sql  drop-atlas-mysql.sql
db/postgresql/: atlas-drop-postgresql.sql  atlas-postgresql.sql  create-atlas-postgresql.sql  drop-atlas-postgresql.sql
db/sqlite/: atlas-init-sqlite.sql  atlas-sqlite.sql  create-atlas-sqlite.sql  drop-atlas-sqlite.sql
docker/: Dockerfile
src/: atlas-applications.adb  atlas-applications.ads  atlas-microblog-beans.adb  atlas-microblog-beans.ads  atlas-server.adb
src/aws/: atlas-init.adb  atlas-init.ads
src/ews/: atlas-init.adb  atlas-init.ads
src/model/: atlas-applications-models.adb  atlas-applications-models.ads  atlas-microblog-models.adb  atlas-microblog-models.ads  atlas-reviews-models.adb  atlas-reviews-models.ads
uml/: atlas.zargo
web/: index.xhtml
web/WEB-INF/layouts/: anonymous.xhtml  footer.xhtml  layout.xhtml  top-bar.xhtml
web/blogs/lists/: post-info.xhtml
web/css/: atlas.css
web/microblog/forms/: post-form.xhtml
web/reviews/: edit-review.xhtml  list.xhtml
web/reviews/forms/: edit-review-form.xhtml
web/reviews/lists/: review-list.xhtml
web/reviews/views/: review-nav.xhtml
web/workspaces/: main.xhtml
