dnl Autoconf configure script for atlas
dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([src/atlas.ads])

AM_GNAT_LIBRARY_PROJECT(atlas)

# Current release settings
ATLAS_MAJOR_VERSION=1
ATLAS_MINOR_VERSION=0
ATLAS_MICRO_VERSION=0
ATLAS_VERSION=$ATLAS_MAJOR_VERSION.$ATLAS_MINOR_VERSION.$ATLAS_MICRO_VERSION

# Set the version number of the project
AC_SUBST(ATLAS_VERSION)
AC_SUBST(ATLAS_MAJOR_VERSION)
AC_SUBST(ATLAS_MINOR_VERSION)
AC_SUBST(ATLAS_MICRO_VERSION)

ATLAS_LIBDIR="lib"
AC_SUBST(ATLAS_LIBDIR)

AM_GNAT_FIND_ADA_UTIL([atlas])
AM_GNAT_FIND_ADA_EL([atlas])
AM_GNAT_FIND_ADA_SECURITY([atlas])
AM_GNAT_FIND_ADA_SERVLET([atlas])
AM_GNAT_FIND_ADA_SERVER_FACES([atlas])
AM_GNAT_FIND_ADA_ADO([atlas])
AM_GNAT_FIND_ADA_WIKI([atlas])
AM_GNAT_FIND_ADA_OPENAPI([atlas])
AM_GNAT_FIND_ADA_AWA([atlas])

AC_CONFIG_FILES([Makefile.conf atlas.gpr
])
AC_OUTPUT
